docs: add all tenant docs
